--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ aiosignal==1.3.2
 airportsdata==20250622
 alembic==1.16.3
 annotated-types==0.7.0
+anthropic==0.83.0
 antlr4-python3-runtime==4.9.3
 anyio==4.9.0
 argon2-cffi==25.1.0
@@ -16,27 +17,36 @@ astor==0.8.1
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
+awscli-local==0.22.2
 babel==2.17.0
 beautifulsoup4==4.13.4
 bitsandbytes==0.46.0
 blake3==1.0.5
 bleach==6.2.0
 blinker==1.9.0
+boto3==1.40.24
+botocore==1.40.24
 cachetools==5.5.2
 certifi==2025.6.15
 cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
+cfgv==3.4.0
+charset-normalizer==3.1.0
+click==8.1.8
 cloudpickle==3.1.1
+cmfrec==3.5.1.post13
 codetiming==1.4.0
 colorama==0.4.6
 colorful==0.5.6
 comm==0.2.2
+commonmark==0.9.1
 compressed-tensors==0.10.1
 contourpy==1.3.2
+cryptography==43.0.3
 cupy-cuda12x==13.4.1
 cycler==0.12.1
+cython==3.1.4
 databricks-sdk==0.58.0
+dataclasses-json==0.6.7
 datasets==3.6.0
 debugpy==1.8.14
 decorator==5.2.1
@@ -48,15 +58,18 @@ distlib==0.3.9
 distro==1.9.0
 dnspython==2.7.0
 docker==7.1.0
+docstring-parser==0.17.0
 eclipse-sumo==1.24.0
 einops==0.8.1
 email-validator==2.2.0
+et-xmlfile==2.0.0
 executing==2.2.0
 fastapi==0.115.13
 fastapi-cli==0.0.7
 fastjsonschema==2.21.1
 fastrlock==0.8.3
 filelock==3.18.0
+findblas==0.1.26.post1
 flash-attn==2.8.0.post2
 flask==3.1.1
 fonttools==4.58.4
@@ -64,6 +77,7 @@ fqdn==1.5.1
 frozenlist==1.7.0
 fsspec==2025.5.1
 gdown==5.2.0
+ggshield==1.43.0
 gguf==0.17.1
 gitdb==4.0.12
 gitpython==3.1.44
@@ -83,11 +97,14 @@ hpack==4.1.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
+httpx-sse==0.4.1
 huggingface-hub==0.33.0
 hydra-core==1.3.2
 hyperframe==6.1.0
+identify==2.6.14
 idna==3.10
 importlib-metadata==8.7.0
+iniconfig==2.1.0
 interegular==0.3.3
 ipykernel==6.29.5
 ipython==9.3.0
@@ -98,6 +115,7 @@ itsdangerous==2.2.0
 jedi==0.19.2
 jinja2==3.1.6
 jiter==0.10.0
+jmespath==1.0.1
 joblib==1.5.1
 json5==0.12.0
 jsonpatch==1.33
@@ -118,19 +136,30 @@ jupyterlab-server==2.27.3
 jupyterlab-widgets==3.0.15
 kernel==0.6.1
 kiwisolver==1.4.8
-langchain-core==0.3.66
+langchain==0.3.27
+langchain-anthropic==1.3.3
+langchain-community==0.3.29
+langchain-core==1.2.14
 langchain-huggingface==0.3.0
 langchain-openai==0.3.25
 langchain-qdrant==0.2.0
+langchain-text-splitters==0.3.9
+langgraph==0.6.6
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.6.4
+langgraph-sdk==0.2.3
 langsmith==0.4.1
 lark==1.2.2
 libsumo==1.24.0
 llguidance==0.7.29
 llvmlite==0.44.0
 lm-format-enforcer==0.10.11
+localstack-client==2.10
 mako==1.3.10
 markdown-it-py==3.0.0
 markupsafe==3.0.2
+marshmallow==3.18.0
+marshmallow-dataclass==8.5.14
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
@@ -143,6 +172,7 @@ msgpack==1.1.1
 msgspec==0.19.0
 multidict==6.5.0
 multiprocess==0.70.16
+mypy-extensions==1.1.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -150,6 +180,7 @@ nest-asyncio==1.6.0
 networkx==3.5
 ninja==1.11.1.4
 nltk==3.9.1
+nodeenv==1.9.1
 notebook==7.4.3
 notebook-shim==0.2.4
 numba==0.61.2
@@ -168,11 +199,13 @@ nvidia-cusparselt-cu12==0.6.3
 nvidia-nccl-cu12==2.26.2
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
+oauthlib==3.2.2
 omegaconf==2.3.0
 openai==1.90.0
 opencensus==0.11.4
 opencensus-context==0.1.3
 opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
 opentelemetry-api==1.34.1
 opentelemetry-exporter-otlp==1.34.1
 opentelemetry-exporter-otlp-proto-common==1.34.1
@@ -186,6 +219,7 @@ opentelemetry-semantic-conventions-ai==0.4.9
 optimum==1.26.1
 optimum-quanto==0.2.7
 orjson==3.10.18
+ormsgpack==1.10.0
 outlines==0.1.11
 outlines-core==0.1.26
 overrides==7.7.0
@@ -194,11 +228,14 @@ pandas==2.3.0
 pandocfilters==1.5.1
 parso==0.8.4
 partial-json-parser==0.2.1.1.post5
+patsy==1.0.1
 peft==0.15.2
 pexpect==4.9.0
 pillow==11.2.1
-platformdirs==4.3.8
+platformdirs==3.0.0
+pluggy==1.6.0
 portalocker==3.2.0
+pre-commit==4.3.0
 prometheus-client==0.22.1
 prometheus-fastapi-instrumentator==7.1.0
 prompt-toolkit==3.0.51
@@ -210,6 +247,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.3
 py-cpuinfo==9.0.0
 py-spy==0.4.0
+py4j==0.10.9.9
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
@@ -217,11 +255,17 @@ pycountry==24.6.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic-core==2.33.2
+pydantic-settings==2.10.1
+pygitguardian==1.25.0
 pygments==2.19.2
+pyjwt==2.6.0
 pyparsing==3.2.3
+pypdf==6.0.0
 pysocks==1.7.1
+pyspark==4.1.1
+pytest==8.4.2
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
+python-dotenv==0.21.1
 python-json-logger==3.3.0
 python-multipart==0.0.20
 pytz==2025.2
@@ -232,23 +276,25 @@ quanto==0.2.0
 ray==2.47.1
 referencing==0.36.2
 regex==2024.11.6
-requests==2.32.4
+requests==2.32.5
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==14.0.0
+rich==14.2.0
 rich-toolkit==0.14.7
 rpds-py==0.25.1
 rsa==4.9.1
+s3transfer==0.13.1
 safetensors==0.5.3
 scikit-learn==1.7.0
 scipy==1.16.0
 seaborn==0.13.2
 send2trash==1.8.3
+sentence-transformers==5.1.0
 sentencepiece==0.2.0
 sentry-sdk==2.32.0
 setproctitle==1.3.6
-setuptools==80.9.0
+setuptools==79.0.1
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
@@ -259,6 +305,7 @@ sqlalchemy==2.0.41
 sqlparse==0.5.3
 stack-data==0.6.3
 starlette==0.46.2
+statsmodels==0.14.5
 sumolib==1.24.0
 sympy==1.14.0
 tenacity==9.1.2
@@ -268,7 +315,7 @@ threadpoolctl==3.6.0
 tiktoken==0.9.0
 tinycss2==1.4.0
 tokenizers==0.21.2
-torch==2.7.1
+torch==2.7.0
 torchaudio==2.7.0
 torchdata==0.11.0
 torchvision==0.22.0
@@ -277,14 +324,17 @@ tqdm==4.67.1
 traci==1.24.0
 traitlets==5.14.3
 transformers==4.53.2
-triton==3.3.1
+triton==3.3.0
+truststore==0.10.4
 typer==0.16.0
 types-python-dateutil==2.9.0.20250516
-typing-extensions==4.14.0
+typing-extensions==4.12.2
+typing-inspect==0.9.0
 typing-inspection==0.4.1
 tzdata==2025.2
 uri-template==1.3.0
-urllib3==2.5.0
+urllib3==2.2.3
+uuid-utils==0.14.1
 uvicorn==0.34.3
 uvloop==0.21.0
 virtualenv==20.31.2
